--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ address {
 }
 
 .copyright {
-    text-align: right;
+    text-align: center;
     margin-top: 4rem;
     flex-basis: 100%;
     font-size: 1.2rem;
@@ -378,6 +378,130 @@ address {
     font-weight: bold;
 }
 
+/* Cookie Popup */
+.cookie-popup {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color:#fff;
+    border-top: var(--primary-color-yellow) solid 3px;
+    color: #000;
+    padding: 20px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+}
+
+.cookie-popup.show {
+    transform: translateY(0);
+}
+
+.cookie-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.cookie-content p {
+    flex: 1;
+    min-width: 250px;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.cookie-buttons {
+    display: flex;
+    gap: 15px;
+}
+
+.cookie-btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+#acceptCookies {
+    background-color: var(--primary-color-yellow);
+    color: var(--primary-color-blue);
+}
+
+#rejectCookies {
+    background-color: transparent;
+    color: #a40d0d;
+    border: 1px solid #a40d0d;
+}
+
+.cookie-btn:hover {
+    opacity: 0.9;
+    transform: translateY(-2px);
+}
+
+@media (max-width: 600px) {
+    .cookie-content {
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .cookie-buttons {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+/* Botão Voltar ao Topo */
+.back-to-top {
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    bottom: 130px;
+    right: 40px;
+    background-color: var(--primary-color-yellow);
+    color: #000;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.back-to-top.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.back-to-top:hover {
+    background-color: var(--primary-color-yellow);
+    transform: translateY(-5px);
+}
+
+.back-to-top:hover svg {
+    fill: var(--primary-color-blue);
+}
+
+@media (max-width: 768px) {
+    .back-to-top {
+        width: 50px;
+        height: 50px;
+        bottom: 100px;
+        right: 20px;
+    }
+}
+
 /* Botão do WhatsApp */
 .whatsapp-float {
     position: fixed;
@@ -396,7 +520,6 @@ address {
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
-    /* Efeito de pulsação */
     animation: pulse 2s infinite;
 }
 
